--- a/modules/ppcp-settings/package.json
+++ b/modules/ppcp-settings/package.json
@@ -7,10 +7,10 @@
         "build": "wp-scripts build --webpack-src-dir=resources/js --output-path=assets"
     },
     "devDependencies": {
+        "@wordpress/data": "^10.10.0",
+        "@wordpress/data-controls": "^4.10.0",
         "@wordpress/scripts": "^30.3.0"
     },
     "dependencies": {
-        "@wordpress/data": "^10.10.0",
-        "@wordpress/data-controls": "^4.10.0"
     }
 }
