--- a/modules/ppcp-settings/package.json
+++ b/modules/ppcp-settings/package.json
@@ -7,7 +7,7 @@
         "build": "wp-scripts build --webpack-src-dir=resources/js --output-path=assets"
     },
     "devDependencies": {
-        "@woocommerce/navigation": "^8.2.0",
+        "@woocommerce/navigation": "8.1.0",
         "@wordpress/data": "^10.10.0",
         "@wordpress/data-controls": "^4.10.0",
         "@wordpress/scripts": "^30.3.0"
