--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -28,6 +28,9 @@
 		<directory name="modules" />
 		<file name="bootstrap.php" />
 		<file name="woocommerce-paypal-payments.php" />
+		<ignoreFiles>
+			<directory name="**/**/node_modules"/>
+		</ignoreFiles>
     </projectFiles>
 
     <stubs>
