--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -29,7 +29,8 @@
 		<file name="bootstrap.php" />
 		<file name="woocommerce-paypal-payments.php" />
 		<ignoreFiles>
-			<directory name="**/**/node_modules"/>
+			<directory name="node_modules"/>
+			<directory name="modules/*/node_modules"/>
 		</ignoreFiles>
     </projectFiles>
 
