--- a/modules/ppcp-save-payment-methods/package.json
+++ b/modules/ppcp-save-payment-methods/package.json
@@ -10,21 +10,21 @@
         "Edge >= 14"
     ],
     "dependencies": {
-        "core-js": "^3.25.0",
+        "core-js": "^3.39",
         "@paypal/paypal-js": "^6.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.19",
-        "@babel/preset-env": "^7.19",
-        "@babel/preset-react": "^7.18.6",
-        "@woocommerce/dependency-extraction-webpack-plugin": "^2.2.0",
-        "babel-loader": "^8.2",
+        "@babel/core": "^7.26",
+        "@babel/preset-env": "^7.26",
+        "@babel/preset-react": "^7.25",
+        "@woocommerce/dependency-extraction-webpack-plugin": "2.2.0",
+        "babel-loader": "^9.2",
         "cross-env": "^7.0.3",
         "file-loader": "^6.2.0",
-        "sass": "^1.42.1",
-        "sass-loader": "^12.1.0",
-        "webpack": "^5.76",
-        "webpack-cli": "^4.10"
+        "sass": "^1.80",
+        "sass-loader": "^16",
+        "webpack": "^5.96",
+        "webpack-cli": "^5"
     },
     "scripts": {
         "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
