--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -14,6 +14,7 @@ nfs_mount_enabled: false
 mutagen_enabled: false
 use_dns_when_possible: true
 composer_version: "2"
+nodejs_version: "22"
 hooks:
   pre-start:
     - exec-host: "mkdir -p .ddev/wordpress/wp-content/plugins/${DDEV_PROJECT}"
