--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@wordpress/element": "^6.1.0",
-    "@wordpress/scripts": "^30",
+    "@wordpress/scripts": "~30.0.0",
     "babel-plugin-explicit-exports-references": "^1.0.2",
     "jquery": "^3.7.1",
     "react-dom": "^18.3.1"
