--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "wp_org_slug": "woocommerce-paypal-payments"
   },
   "dependencies": {
+    "@wordpress/icons": "^10.11.0",
     "dotenv": "^16.0.3",
     "npm-run-all": "^4.1.5",
     "playwright": "^1.43.0",
