--- a/.github/workflows/package-new.yml
+++ b/.github/workflows/package-new.yml
@@ -30,6 +30,7 @@ jobs:
     uses: inpsyde/reusable-workflows/.github/workflows/build-plugin-archive.yml@main
     with:
       PHP_VERSION: 7.4
+      NODE_VERSION: 22
       PLUGIN_MAIN_FILE: ./woocommerce-paypal-payments.php
       PLUGIN_VERSION: ${{ needs.check_version.outputs.version }}
       PLUGIN_FOLDER_NAME: woocommerce-paypal-payments
