--- a/modules/ppcp-settings/package.json
+++ b/modules/ppcp-settings/package.json
@@ -13,7 +13,7 @@
         "@wordpress/scripts": "^30.3.0"
     },
     "dependencies": {
-        "@paypal/paypal-js": "^8.1.2",
+        "@paypal/react-paypal-js": "^8.7.0",
         "@woocommerce/settings": "^1.0.0",
         "deepmerge": "^4.3.1",
         "react-select": "^5.8.3"
