--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "php-stubs/wordpress-stubs": "^v6.7.1",
         "php-stubs/woocommerce-stubs": "^v8.9.1",
         "vimeo/psalm": "^4.0",
-        "vlucas/phpdotenv": "^5"
+        "vlucas/phpdotenv": "^5",
+        "squizlabs/php_codesniffer": "^3.11"
     },
     "autoload": {
         "psr-4": {
