revert changes and try to run psalm only php 7.4

--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -35,13 +35,13 @@
     </projectFiles>
 
     <stubs>
+    	<file name=".psalm/stubs.php"/>
     	<file name=".psalm/wcblocks.php"/>
     	<file name=".psalm/wcs.php"/>
     	<file name=".psalm/gzd.php"/>
     	<file name=".psalm/wc-bookings.php"/>
     	<file name=".psalm/wpcli.php"/>
 		<file name="vendor/php-stubs/wordpress-stubs/wordpress-stubs.php"/>
-		<file name=".psalm/stubs.php"/>
 		<file name="vendor/php-stubs/woocommerce-stubs/woocommerce-stubs.php"/>
     </stubs>
 
@@ -58,6 +58,7 @@
         <FalsableReturnStatement errorLevel="error"/>
         <FalseOperand errorLevel="error"/>
         <ForbiddenCode errorLevel="error"/>
+        <ForbiddenEcho errorLevel="error"/>
         <InaccessibleClassConstant errorLevel="error"/>
         <InaccessibleMethod errorLevel="error"/>
         <InterfaceInstantiation errorLevel="error"/>
@@ -162,8 +163,6 @@
 		<ParamNameMismatch errorLevel="info"/>
 		<RedundantCastGivenDocblockType errorLevel="info"/>
 		<RiskyCast errorLevel="info"/>
-
-		<RiskyTruthyFalsyComparison errorLevel="info"/>
 
 		<TooManyArguments>
 			<errorLevel type="suppress">
