--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,6 +31,8 @@ jobs:
 
     - name: Psalm
       run: ./vendor/bin/psalm --show-info=false --threads=8 --diff
+      with:
+        php-version: '7.4'
 
     - name: Run PHPCS
       run: ./vendor/bin/phpcs --runtime-set ignore_warnings_on_exit 1 src modules woocommerce-paypal-payments.php --extensions=php
