--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,10 @@
         "woocommerce/woocommerce-sniffs": "^0.1.0",
         "phpunit/phpunit": "^7.0 | ^8.0 | ^9.0",
         "brain/monkey": "^2.4",
-        "php-stubs/wordpress-stubs": "^v6.7.1",
-        "php-stubs/woocommerce-stubs": "^v8.9.1",
-        "vimeo/psalm": "^5.0",
-        "vlucas/phpdotenv": "^5",
-        "squizlabs/php_codesniffer": "^3.11"
+        "php-stubs/wordpress-stubs": "^5.0@stable",
+        "php-stubs/woocommerce-stubs": "^8.0@stable",
+        "vimeo/psalm": "^4.0",
+        "vlucas/phpdotenv": "^5"
     },
     "autoload": {
         "psr-4": {
