--- a/modules/ppcp-paypal-subscriptions/package.json
+++ b/modules/ppcp-paypal-subscriptions/package.json
@@ -15,6 +15,7 @@
     "devDependencies": {
         "@babel/core": "^7.26",
         "@babel/preset-env": "^7.26",
+        "@wordpress/i18n": "^5.11",
         "babel-loader": "^9.2",
         "cross-env": "^7.0.3",
         "file-loader": "^6.2.0",
